# mobile_robot_in_warehouse

./: 4motors_keyboard_encoders.ino  all.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/control/lib/control/: encoder_speed_node  fake_odom_publisher  functions  logic  odom_node
install/control/share/control/: package.sh
install/ldlidar_stl_ros2/lib/ldlidar_stl_ros2/: ldlidar_stl_ros2_node
install/ldlidar_stl_ros2/share/ament_index/resource_index/parent_prefix_path/: ldlidar_stl_ros2
install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/: local_setup.sh  package.sh
install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/launch/: ld06.launch.py
install/robo_pro_description/share/robo_pro_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robo_pro_description/share/robo_pro_description/cmake/: robo_pro_descriptionConfig.cmake
install/robo_pro_description/share/robo_pro_description/config/: mapper_params_online_async.yaml
install/robo_pro_description/share/robo_pro_description/launch/: display.launch.py
install/robo_pro_description/share/robo_pro_description/urdf/: gazebo_control.xacro  inertial_macros.xacro  robo.urdf.xacro
log/: latest_build
src/control/: package.xml  setup.py
src/control/control/: encoder_speed_node.py  odom_node.py
src/robo_pro_description/: CMakeLists.txt
src/robo_pro_description/config/: joint_names_MR_VFP_sim.yaml  urdf_config.rviz
src/robo_pro_description/urdf/: lidar_ld06.xacro  robo_body.xacro
(+1 files in other folders)
